Revert "Possible fix for iOS Safari image height jump"
This reverts commit ed8c9d12a01547f5b4e17abc1cdc0736e07b1ec7.

--- a/src/components/cover-image.css
+++ b/src/components/cover-image.css
@@ -7,10 +7,6 @@
   height: 100%;
 }
 
-.cover-image__image.gatsby-image-wrapper > div {
-  padding-bottom: 100vh !important;
-}
-
 .cover-image__wedding-date {
   position: absolute;
   top: 50%;
